# artifacts/api-server/src/routes/index.ts
@@ -2,7 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import usersRouter from "./users";
-import vehiclesRouter from "./vehicles";
+import productsRouter from "./products";
 import qrcodesRouter from "./qrcodes";
 import scansRouter from "./scans";
 import claimsRouter from "./claims";
@@ -18,7 +18,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use("/auth", authRouter);
 router.use("/users", usersRouter);
-router.use("/vehicles", vehiclesRouter);
+router.use("/products", productsRouter);
 router.use("/qrcodes", qrcodesRouter);
 router.use("/scans", scansRouter);
 router.use("/claims", claimsRouter);
